# bashlet

./: .gitignore  CODE_REVIEW.md  CODE_REVIEW_REPORT.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  publish-sdk.yml  release.yml
config/: default.toml
docker/: Dockerfile.sandbox
docs/: CNAME  index.html  install.sh  python-sdk.html  typescript-sdk.html
examples/file-search/: .env.example  .gitignore  README.md  package-lock.json  package.json
examples/file-search/app/: globals.css  layout.tsx  page.tsx
examples/file-search/app/api/chat/: route.ts
examples/file-search/app/components/: Chat.tsx
examples/file-search/lib/: bashlet.ts
examples/k8s-debugger/: .env.example  README.md  next.config.ts  package.json
examples/k8s-debugger/app/: layout.tsx
examples/k8s-debugger/app/api/chat/: route.ts
examples/k8s-debugger/app/components/: Chat.tsx
examples/k8s-debugger/lib/: bashlet.ts
examples/wardley-map/: package.json  tailwind.config.ts
examples/wardley-map/app/: globals.css  layout.tsx  page.tsx
examples/wardley-map/app/components/: WardleyCanvas.tsx
examples/wardley-map/lib/: types.ts
guest-agent/: Cargo.toml  build.sh
guest-agent/src/: main.rs
src/: error.rs  lib.rs  main.rs
src/agent/: agent_loop.rs  mod.rs  prompt.rs  tools.rs
src/cli/: args.rs  commands.rs
src/config/: loader.rs  mod.rs  types.rs
src/providers/: anthropic.rs  mod.rs  openai.rs  registry.rs  traits.rs
src/sandbox/: executor.rs  factory.rs  mod.rs  native_proxy.rs  traits.rs
src/sandbox/backends/: docker.rs  mod.rs  ssh.rs  wasmer.rs
src/sandbox/backends/firecracker/: api.rs  assets.rs  mod.rs  vm.rs  vsock.rs
src/session/: mod.rs
