[package]
name = "bashlet"
version = "0.1.0"
edition = "2021"
description = "Sandboxed bash execution environment using WebAssembly"
license = "MIT"
repository = "https://github.com/user/bashlet"
readme = "README.md"
keywords = ["sandbox", "wasm", "bash", "security"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full", "process"] }
async-trait = "0.1"

# HTTP client for downloading WASM
reqwest = { version = "0.12", features = ["json"] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
directories = "5"
chrono = "0.4"

[features]
default = []

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "bashlet"
path = "src/main.rs"
